# PROJ_CAL_1920

./: .gitignore  README.md
Fix It/: .floo  CMakeLists.txt  main.cpp
Fix It/files/: pickets.txt  tasks.txt
Fix It/lib/: graphviewer.h
Fix It/maps/Espinho/: espinho_full_edges.txt  espinho_full_nodes_xy.txt  espinho_strong_edges.txt  espinho_strong_nodes_xy.txt
Fix It/maps/Porto/: edges.txt  nodes.txt  nodes_lat_lon_porto.txt  porto_full_edges.txt  porto_full_nodes_xy.txt
Fix It/src/: Company.cpp  Company.h  GraphInterface.cpp  GraphInterface.h  Picket.cpp  Picket.h  Task.cpp  Task.h
Fix It/src/Algorithms/: AStar.h  AStarBiDir.h  Clustering.h  DFS.h  Dijkstra.h  DijkstraBiDir.h  Pairing.h  Prim.h  SCC.cpp  SCC.h  SearchAlgorithms.h  Square.h  TSP.h
Fix It/src/Graph/: AVertex.h  Graph.h  MutablePriorityQueue.h  TaskEdge.h  Test.txt
Fix It/src/GraphViewer/: connection.h  edgetype.h  graphviewer.h
Fix It/src/UserInterface/: GraphInterface.h  Menu.cpp  Menu.h
Fix It/src/Utils/: NecessaryFunctions_NameSpaces.cpp  NecessaryFunctions_NameSpaces.h  Time.cpp  Time.h
